--- a/assignment2/PyTorch.ipynb
+++ b/assignment2/PyTorch.ipynb
@@ -450,18 +450,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.1063, -0.9272, -0.4413, -1.8104, -0.0620],\n",
-       "        [ 0.8286, -0.0341,  0.3111,  1.1345,  0.4044],\n",
-       "        [ 0.6579,  0.3698,  0.1211, -1.2634,  1.5625]], requires_grad=True)"
+       "tensor([[-0.0739,  0.2677, -0.5512, -0.3732, -0.4745],\n",
+       "        [-0.3087,  1.0481, -0.3085,  0.4776,  1.2635],\n",
+       "        [ 0.5082, -1.1943, -1.4597,  1.0079,  0.1568]], requires_grad=True)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,44 +1269,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kaiming_normal(shape):\n",
+    "    \"\"\"\n",
+    "    Create random Tensors for weights; setting requires_grad=True means that we\n",
+    "    want to compute gradients for these Tensors during the backward pass.\n",
+    "    We use Kaiming normalization: sqrt(2 / fan_in)\n",
+    "    \"\"\"\n",
+    "    if len(shape) == 2:  # FC weight\n",
+    "        # different here from `random_weight()`\n",
+    "        # as weight for nn.Linear in pytorch is of shape: [out_feature, in_feature]\n",
+    "        fan_in = shape[1]\n",
+    "    else:\n",
+    "        fan_in = np.prod(shape[1:]) # conv weight [out_channel, in_channel, kH, kW]\n",
+    "    # randn is standard normal distribution generator. \n",
+    "    w = torch.randn(shape, device=device, dtype=dtype) * np.sqrt(2. / fan_in)\n",
+    "    w.requires_grad = True\n",
+    "    return w\n",
+    "\n",
+    "def xavier_normal(shape):\n",
+    "    \"\"\"\n",
+    "    Create random Tensors for weights; setting requires_grad=True means that we\n",
+    "    want to compute gradients for these Tensors during the backward pass.\n",
+    "    We use Xavier normalization: sqrt(2 / (fan_in + fan_out))\n",
+    "    \"\"\"\n",
+    "    if len(shape) == 2:  # FC weight\n",
+    "        fan_in = shape[1]\n",
+    "        fan_out = shape[0]\n",
+    "    else:\n",
+    "        fan_in = np.prod(shape[1:]) # conv weight [out_channel, in_channel, kH, kW]\n",
+    "        fan_out = shape[0] * shape[2] * shape[3]\n",
+    "    # randn is standard normal distribution generator. \n",
+    "    w = torch.randn(shape, device=device, dtype=dtype) * np.sqrt(2. / (fan_in + fan_out))\n",
+    "    w.requires_grad = True\n",
+    "    return w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 0, loss = 2.3230\n",
+      "Iteration 0, loss = 2.3089\n",
       "Checking accuracy on validation set\n",
-      "Got 128 / 1000 correct (12.80%)\n",
+      "Got 122 / 1000 correct (12.20%)\n",
       "\n",
-      "Iteration 100, loss = 1.5405\n",
+      "Iteration 100, loss = 1.6912\n",
       "Checking accuracy on validation set\n",
-      "Got 472 / 1000 correct (47.20%)\n",
+      "Got 437 / 1000 correct (43.70%)\n",
       "\n",
-      "Iteration 200, loss = 1.5108\n",
+      "Iteration 200, loss = 1.5988\n",
       "Checking accuracy on validation set\n",
-      "Got 514 / 1000 correct (51.40%)\n",
+      "Got 486 / 1000 correct (48.60%)\n",
       "\n",
-      "Iteration 300, loss = 1.5656\n",
+      "Iteration 300, loss = 1.3153\n",
       "Checking accuracy on validation set\n",
-      "Got 531 / 1000 correct (53.10%)\n",
+      "Got 503 / 1000 correct (50.30%)\n",
       "\n",
-      "Iteration 400, loss = 1.3023\n",
+      "Iteration 400, loss = 1.2407\n",
       "Checking accuracy on validation set\n",
-      "Got 538 / 1000 correct (53.80%)\n",
+      "Got 527 / 1000 correct (52.70%)\n",
       "\n",
-      "Iteration 500, loss = 1.1528\n",
+      "Iteration 500, loss = 1.3691\n",
       "Checking accuracy on validation set\n",
-      "Got 547 / 1000 correct (54.70%)\n",
+      "Got 549 / 1000 correct (54.90%)\n",
       "\n",
-      "Iteration 600, loss = 0.9754\n",
+      "Iteration 600, loss = 1.5949\n",
       "Checking accuracy on validation set\n",
-      "Got 566 / 1000 correct (56.60%)\n",
+      "Got 570 / 1000 correct (57.00%)\n",
       "\n",
-      "Iteration 700, loss = 1.2303\n",
+      "Iteration 700, loss = 1.1131\n",
       "Checking accuracy on validation set\n",
-      "Got 566 / 1000 correct (56.60%)\n",
+      "Got 592 / 1000 correct (59.20%)\n",
       "\n"
      ]
     }
@@ -1336,8 +1379,18 @@
     "\n",
     "def init_weights(m):\n",
     "    if type(m) == nn.Linear or type(m) == nn.Conv2d:\n",
-    "        m.weight.data.copy_ = random_weight(m.weight.data.size())\n",
-    "        m.bias.data.copy_ = zero_weight(m.bias.data.size())\n",
+    "        # m.weight.data.copy_(random_weight(m.weight.data.size()))\n",
+    "        # m.bias.data.copy_(zero_weight(m.bias.data.size()))\n",
+    "        \n",
+    "        # Note that weight shape of `nn.Linear` is [out_feature, in_feature]\n",
+    "        # and the fan_in in random_weight is defined as weight.size()[0].\n",
+    "        # So if use random_weight here, the initialization weights'll be divided by the number of `out_features`\n",
+    "        # and the activations will explode and model gradient flow will vanish.\n",
+    "        # m.weight.data = random_weight(m.weight.size())\n",
+    "        \n",
+    "        # m.weight.data = kaiming_normal(m.weight.size())\n",
+    "        m.weight.data = xavier_normal(m.weight.size())\n",
+    "        m.bias.data = zero_weight(m.bias.size())\n",
     "\n",
     "model.apply(init_weights)\n",
     "################################################################################\n",
